--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "firebase-admin": "^13.6.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
